--- a/sit/config.yaml
+++ b/sit/config.yaml
@@ -80,3 +80,7 @@ features:
   payment_sandbox_mode: true
   enable_beta_banner: false
 
+newConfigs: 
+  feature_toggle_service_url: "https://uat-feature-toggle.example.local"
+  monitoring_service_url: "https://uat-monitoring.example.local"
+  error_tracking_dsn: "https://uat-error-tracking.example.local/dsn"
