--- a/dev/config.yaml
+++ b/dev/config.yaml
@@ -12,7 +12,7 @@ app:
 
 unsafe_for_prod:
   DEBUG: true                    # must be false in prod
-  ALLOW_HTTP: true               # insecure for production
+  ALLOW_HTTP: trues               # insecure for production
   SKIP_SSL_VERIFY: true          # disables TLS verification
   ENABLE_SQL_LOGGING: true       # verbose SQL logs (sensitive)
   SEED_DEMO_DATA: true           # seeds non-prod test data
@@ -81,9 +81,9 @@ features:
   enable_beta_banner: true
   
 newConfigs: 
-  feature_toggle_service_url: "https://uat-feature-toggle.example.local"
-  monitoring_service_url: "https://uat-monitoring.example.local"
-  error_tracking_dsn: "https://uat-error-tracking.example.local/dsn"
+  feature_toggle_service_url: "https://devs-feature-toggle.example.local"
+  monitoring_service_url: "https://dev-monitoring.example.local"
+  error_tracking_dsn: "https://dev-error-tracking.example.local/dsn"
 
 ci:
   auto_apply_migrations: true
