--- a/sit/config.yaml
+++ b/sit/config.yaml
@@ -85,3 +85,6 @@ newConfigs:
   feature_toggle_service_url: "https://uat-feature-toggle.example.local"
   monitoring_service_url: "https://uat-monitoring.example.local"
   error_tracking_dsn: "https://uat-error-tracking.example.local/dsn"
+
+paymentConfig:
+  bankBIC: "SBZAZAJ0"
