added helper todo

--- a/prod/config.yaml
+++ b/prod/config.yaml
@@ -80,4 +80,5 @@ features:
   enable_beta_banner: false
 
 paymentConfig:
+  # TODO: ensure this is the correct BIC for production
   bankBIC: "SBZAZAJ0"
